--- a/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
+++ b/src/app/pessoas/pessoas-pesquisa/pessoas-pesquisa.component.html
@@ -51,9 +51,9 @@
               </a>
             </td>
             <td class="col-acoes">
-              <button pButton icon="fa-pencil"
+              <a pButton icon="fa-pencil"
                 pTooltip="Editar" tooltipPosition="top"
-                [routerLink]="['/pessoas', pessoa.codigo]"></button>
+                [routerLink]="['/pessoas', pessoa.codigo]"></a>
 
               <button pButton icon="fa-trash"
                 pTooltip="Excluir" tooltipPosition="top"
