--- a/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
+++ b/src/app/lancamentos/lancamentos-pesquisa/lancamentos-pesquisa.component.html
@@ -57,10 +57,10 @@
               <td class="col-valor" [style.color]="lancamento.tipo === 'DESPESA' ? 'red' : 'blue'">
                 {{ lancamento.valor | number:'1.2-2'}}</td>
               <td class="col-acoes">
-                <a pButton icon="fa-pencil" pTooltip="Editar"
+                <a pButton icon="fa fa-pencil" pTooltip="Editar"
                 tooltipPosition="top"
                 [routerLink]="['/lancamentos', lancamento.codigo]"></a>
-              <button pButton icon="fa-trash"
+              <button pButton icon="fa fa-trash"
                 pTooltip="Excluir" tooltipPosition="top"
                 (click)="confirmarExclusao(lancamento)"
                 [disabled]="!auth.temPermissao('ROLE_REMOVER_LANCAMENTO')"></button>
