--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,10 @@ a:hover, a:focus {
   text-decoration: underline;
 }
 
+a, button {
+  margin-right: .25em
+}
+
 label {
   font-weight: bold;
 }
@@ -48,10 +52,10 @@ label {
 }
 
 .col-acoes {
-  width: 90px;
+  width: 100px;
   text-align: center;
 }
 
 .col-acoes-header {
-  width: 90px;
+  width: 100px;
 }
